--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
+# project portofolio/junior project/daily-expense-tracker/requirements.txt
+
+"""
+Required Libraries for Daily Expense Tracker
+Specifies the necessary Python libraries and their versions
+for the daily-expense-tracker application.
+"""
+
+
 matplotlib>=3.7.1
 pandas>=2.0.3
 openpyxl>=3.1.2
