--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,29 @@
-# project portofolio/junior project/daily-expense-tracker/requirements.txt
+# requirements.txt
 
 """
-Required Libraries for Daily Expense Tracker
-Specifies the necessary Python libraries and their versions
-for the daily-expense-tracker application.
-"""
+Project Dependencies for Daily Expense Tracker
+Core Libraries
+""" 
 
 
-matplotlib>=3.7.1
-pandas>=2.0.3
-openpyxl>=3.1.2
-python-dateutil>=2.8.2
-pytest>=7.0.0
+matplotlib==3.7.1
+pandas==2.0.3
+openpyxl==3.1.2
+python-dateutil==2.8.2
+
+# Development & Testing
+pytest==7.4.2
+pytest-cov==4.1.0
+pytest-mock==3.11.1
+
+# Code Quality
+black==23.12.1
+flake8==6.1.0
+isort==5.12.0
+mypy==1.5.1
+
+# Security
+bandit==1.7.5
+
+# Performance
+psutil==5.9.5
