--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,9 @@ build-backend = "setuptools.build_meta"
 name = "daily-expense-tracker"
 version = "1.0.0"
 authors = [
-    {name = "Developer", email = "dev@example.com"},
+    {name = "Arkan Tsabit", email = "aarkantsabit@gmail.com"},
 ]
-description = "A comprehensive Python application for tracking and analyzing daily expenses"
+description = "A Useful Python application for tracking and analyzing daily expenses"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
