--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,15 @@
-# requirements.txt
-
-"""
-Project Dependencies for Daily Expense Tracker
-Core Libraries
-""" 
-
-
+# Core dependencies (from blueprint)
 matplotlib==3.7.1
 pandas==2.0.3
 openpyxl==3.1.2
 python-dateutil==2.8.2
 
-# Development & Testing
-pytest==7.4.2
-pytest-cov==4.1.0
-pytest-mock==3.11.1
+# Testing
+pytest==9.0.1
+pytest-cov==7.0.0
+pytest-mock==3.14.0
 
-# Code Quality
-black==23.12.1
-flake8==6.1.0
-isort==5.12.0
-mypy==1.5.1
-
-# Security
-bandit==1.7.5
-
-# Performance
-psutil==5.9.5
+# Development tools
+black==24.10.0
+flake8==7.1.2
+coverage==7.10.6  # Updated to be compatible with pytest-cov
